--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,11 @@ tmp-php.ini
 !/ext/fileinfo/magicdata.patch
 !/ext/pcre/pcre2lib/config.h
 !/win32/build/Makefile
+
+# ------------------------------------------------------------------------------
+# Project settings
+# ------------------------------------------------------------------------------
+/.idea
+/.settings
+/.project
+/.cproject
