--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,11 @@
     "psr-4": {
       "SwooleCli\\": "sapi"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.6"
+  },
+  "scripts": {
+    "test": "phpunit"
   }
 }
