--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.6"
+    "phpunit/phpunit": "^9.6",
+    "ext-curl": "*"
   },
   "scripts": {
     "test": "phpunit"
