调整构建配置 命名 (#132)
* 调整命名

* 默认停止所有构建

* fix bug

* fix word error

* fix

* fix

* fix

* fix

--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -1,9 +1,9 @@
-name: build-swoole-cli-linux-amd64
+name: build-swoole-cli-linux-x86_64
 
 on: [ push, pull_request ]
 
 jobs:
-  linux:
+  linux-x86_64:
     if: 0
     runs-on: ubuntu-latest
     steps:
