--- a/.github/workflows/linux-aarch64.yml
+++ b/.github/workflows/linux-aarch64.yml
@@ -3,8 +3,8 @@ name: build-swoole-cli-linux-aarch64
 on: [ push, pull_request ]
 
 jobs:
-  linux:
-    if: 1
+  linux-aarch64:
+    if: 0
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
