--- a/.github/workflows/windows-cygwin.yml
+++ b/.github/workflows/windows-cygwin.yml
@@ -3,15 +3,19 @@ name: build-swoole-cli-windows-cygwin
 on: [ push, pull_request ]
 
 jobs:
-  cygwin:
-    if: 1
+  windows-cygwin:
+    if: 0
     runs-on: windows-latest
     steps:
       - name: Prepare git
+
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
       - uses: actions/checkout@v3
+      - name: Prepare submodule
+        run: |
+          git submodule update --init
       - name: Cache cygwin packages
         id: cache-cygwin
         uses: actions/cache@v3
@@ -31,7 +35,8 @@ jobs:
       - name: Configure
         run: |
           uname -a
-          git submodule update --init
+          # git config --global --add safe.directory /cygdrive/d/a/swoole-cli/swoole-cli
+          # git submodule update --init
           bash ./sapi/scripts/cygwin/cygwin-config-ext.sh
           bash ./sapi/scripts/cygwin/cygwin-config.sh
       - name: Build
