--- a/.github/workflows/linux-aarch64.yml
+++ b/.github/workflows/linux-aarch64.yml
@@ -56,10 +56,14 @@ jobs:
             bash ./make.sh config
             bash ./make.sh build
             bash ./make.sh archive
-            ./bin/swoole-cli -v
-            file ./bin/swoole-cli
-            readelf -h ./bin/swoole-cli
-            ./bin/swoole-cli -r "echo PHP_VERSION;"
+
+      - name: Show Build Result
+        run: |
+          ./bin/swoole-cli -v
+          file ./bin/swoole-cli
+          readelf -h ./bin/swoole-cli
+          ./bin/swoole-cli -r "echo PHP_VERSION;"
+
       - name: production artifacts
         uses: actions/upload-artifact@v3
         with:
