保存预处理的参数到 make.sh

--- a/.gitignore
+++ b/.gitignore
@@ -311,6 +311,7 @@ tmp-php.ini
 /ext/swoole_tracker_agent
 /ext/loader8
 /ext/ds
+/ext/xlswriter
 /.phpunit.result.cache
 /samples/sfx/*.phar
 composer.lock
@@ -318,3 +319,4 @@ composer.lock
 ldflags.log
 cppflags.log
 /packages
+/conf.d.loader
