Feature update docs (#149)
* 更新文档

* quickstart 添加 可跳过编译依赖库的容器

* fix error

* 允许自定义安装目录

* define php version

* 更新缓存目录

* 调整分布构建依赖库容器镜像默认目录

* update

* update

* update

* update

* update macos lld

* update

* update swoole to v5.0.3

* update macos build yml

* update macos build yml

* add brew install llvm

* 更新README.md

* update dockerfile

* 更新 macos 构建文档

--- a/.github/workflows/linux-aarch64.yml
+++ b/.github/workflows/linux-aarch64.yml
@@ -43,7 +43,7 @@ jobs:
             set -eux
             # export PATH=/work/bin/runtime:$PATH  # 容器已经内置 php 和 composer 容器
             composer update --no-dev  --optimize-autoloader
-            php prepare.php  +inotify +apcu +ds
+            php prepare.php  +inotify +apcu +ds --with-global-prefix=/usr
             chmod a+x make.sh
             head -n 20 make.sh
       - name: Build
