扩展库配置与依赖库配置 分离 (#150)
* 更新文档

* quickstart 添加 可跳过编译依赖库的容器

* fix error

* 允许自定义安装目录

* define php version

* 更新缓存目录

* 调整分布构建依赖库容器镜像默认目录

* update

* update

* update

* update

* update macos lld

* 依赖库配置与扩展库配置分离

* update

* update mongodb depends

* macos 设定 目录权限

* update mongodb depends

* update mongodb depends

* update mongodb depends

* update mongodb depends

* update mongodb depends

* update mongodb depends

* update swoole version

* update

* update

* 调整mongodb 依赖库判断 bison

* update

* update swoole to v5.0.3

* update swoole version

* update macos build yml

* update macos build yml

* add brew install llvm

* 更新README.md

* update dockerfile

* 调整未有pkg-config 配置的依赖库导入预处理变量

* format code Preprocessor.php

* 使用系统默认clang linker

* 解决 macos ld64.lld 找不到

* 更新macos 构建文档

* 验证 openssl macos -static

* 验证 openssl macos -static

* 验证 openssl macos -static

* macos 环境去掉 -all-static

* sqlite3 启用 column metadata

* 验证macos clang 静态链接

* macos llvm 依赖 zstd

--- a/.github/workflows/macos-x86_64.yml
+++ b/.github/workflows/macos-x86_64.yml
@@ -16,12 +16,12 @@ jobs:
           brew uninstall --ignore-dependencies oniguruma
           brew uninstall --ignore-dependencies brotli
           brew uninstall --ignore-dependencies freetype
-          brew uninstall --ignore-dependencies zstd
+          # brew uninstall --ignore-dependencies zstd
           brew uninstall --ignore-dependencies capstone
           which glibtool
           ln -sf /usr/local/bin/glibtool /usr/local/bin/libtool
           ln -sf /usr/local/bin/glibtoolize /usr/local/bin/libtoolize
-          sudo  xcode-select --switch /Applications/Xcode.app
+          # sudo  xcode-select --switch /Applications/Xcode.app
           # export MACOSX_DEPLOYMENT_TARGET=12.6
           CURRENT_USER=$(whoami)
           echo ${CURRENT_USER}
