--- a/.github/workflows/macos-x86_64.yml
+++ b/.github/workflows/macos-x86_64.yml
@@ -13,16 +13,22 @@ jobs:
           env
           echo $HOME
           brew install  wget curl  libtool automake gettext coreutils re2c binutils llvm
-          brew uninstall --ignore-dependencies oniguruma
-          brew uninstall --ignore-dependencies brotli
-          brew uninstall --ignore-dependencies freetype
+
+          # brew uninstall --ignore-dependencies oniguruma
+          # brew uninstall --ignore-dependencies brotli
+          # brew uninstall --ignore-dependencies freetype
           # brew uninstall --ignore-dependencies zstd
+
+          brew uninstall --ignore-dependencies snappy
           brew uninstall --ignore-dependencies capstone
+
           which glibtool
           ln -sf /usr/local/bin/glibtool /usr/local/bin/libtool
           ln -sf /usr/local/bin/glibtoolize /usr/local/bin/libtoolize
+
           # sudo  xcode-select --switch /Applications/Xcode.app
           # export MACOSX_DEPLOYMENT_TARGET=12.6
+
           CURRENT_USER=$(whoami)
           echo ${CURRENT_USER}
           sudo mkdir -p /usr/local/swoole-cli
@@ -46,7 +52,6 @@ jobs:
         uses: actions/cache@v3
         id: all-library-cache
         with:
-          # path: ~/.swoole-cli
           path: /usr/local/swoole-cli
           key: ${{ runner.os }}-build-all-library
       - name: Build all-library
