--- a/.github/workflows/macos-x86_64.yml
+++ b/.github/workflows/macos-x86_64.yml
@@ -12,7 +12,10 @@ jobs:
         run: |
           env
           echo $HOME
-          brew install  wget curl  libtool automake gettext coreutils re2c binutils llvm
+          brew config
+
+          brew install  wget curl  libtool automake  re2c llvm flex bison
+          brew install  gettext coreutils binutils libunistring
 
           # brew uninstall --ignore-dependencies oniguruma
           # brew uninstall --ignore-dependencies brotli
@@ -26,13 +29,36 @@ jobs:
           ln -sf /usr/local/bin/glibtool /usr/local/bin/libtool
           ln -sf /usr/local/bin/glibtoolize /usr/local/bin/libtoolize
 
+          # sudo rm -rf /Library/Developer/CommandLineTools
+          # xcode-select --install
+
+          # sudo xcode-select --reset
+          # sudo xcode-select -switch /Library/Developer/CommandLineTools
+
+          # softwareupdate --list --verbose
+          # softwareupdate --install -a
+          # xcode-select --install
+
+          # export SDKROOT=$(xcrun --show-sdk-path)
+          ls -lh $(xcrun --show-sdk-path)
           # sudo  xcode-select --switch /Applications/Xcode.app
           # export MACOSX_DEPLOYMENT_TARGET=12.6
+
+          ifconfig
+          export IPV6=$(ifconfig en0  | grep "inet6 " | grep -v "inet6 fe80:" | awk '{print $2}' | cut -d'/' -f1 | sed -n '2p')
+          export IPV4=$(ifconfig en0 | grep "inet " | grep -v 127.0.0 | awk '{print $2}' | cut -d'/' -f1 | sed -n '1p')
+          echo $IPV4
+          echo $IPV6
+          echo "X_IPV6=${IPV6}" >> $GITHUB_ENV
+          echo "X_IPV4=${IPV4}" >> $GITHUB_ENV
+
+          export PATH=/usr/local/opt/bison/bin:/usr/local/opt/llvm/bin:$PATH
+          # brew bison --debug
 
           CURRENT_USER=$(whoami)
           echo ${CURRENT_USER}
           sudo mkdir -p /usr/local/swoole-cli
-          sudo chown -R ${CURRENT_USER}:staff /usr/local/swoole-cli
+          CURRENT_USER=$(whoami) && sudo chown -R ${CURRENT_USER}:staff /usr/local/swoole-cli
           git submodule update --init
 
       - name: Prepare runtime
@@ -46,8 +72,11 @@ jobs:
       - name: prepare
         run: |
           export PATH=${GITHUB_WORKSPACE}/bin/runtime:$PATH
-          composer update --no-dev  --optimize-autoloader
-          php prepare.php --without-docker=1  --with-build-type=release  +ds +apcu
+
+          # composer update --no-dev  --optimize-autoloader
+          composer update  --optimize-autoloader
+          php prepare.php --without-docker=1  --with-build-type=release  +apcu +ds +xlswriter +ssh2
+
       - name: Cache all-library
         uses: actions/cache@v3
         id: all-library-cache
@@ -58,22 +87,26 @@ jobs:
         if: ${{ steps.all-library-cache.outputs.cache-hit != 'true' }}
         run: |
           export PATH=${GITHUB_WORKSPACE}/bin/runtime:$PATH
-          chmod a+x ./make.sh
-          ./make.sh all-library
+          bash ./make.sh all-library
 
       - name: Build
         run: |
           export PATH=${GITHUB_WORKSPACE}/bin/runtime:$PATH
-          chmod a+x ./make.sh
-          ./make.sh config
-          ./make.sh build
-          ./make.sh archive
+          bash ./make.sh config
+          bash ./make.sh build
+          bash ./make.sh archive
+
 
       - name: Show Build Result
         run: |
+          ./bin/swoole-cli -v
+          ./bin/swoole-cli -m
+          ./bin/swoole-cli --ri swoole
           file ./bin/swoole-cli
           otool -L ./bin/swoole-cli
           ./bin/swoole-cli -r "echo PHP_VERSION;"
+          ./bin/swoole-cli ./vendor/bin/phpunit ./sapi/src/UnitTest/MainTest.php  --list-tests
+          ./bin/swoole-cli ./vendor/bin/phpunit ./sapi/src/UnitTest/MainTest.php
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
