--- a/.github/workflows/linux-x86_64.yml
+++ b/.github/workflows/linux-x86_64.yml
@@ -10,7 +10,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: Prepare Source Code
         run: |
-          lscpu
           echo $PATH
           env
           docker info
@@ -22,50 +21,62 @@ jobs:
           uname -s
           uname -m
           uname -r
+          cat /proc/cpuinfo | grep name | cut -f2 -d: | uniq -c
+          cat /proc/cpuinfo| grep "physical id"| sort| uniq| wc -l
+          cat /proc/cpuinfo | grep "cpu cores" | uniq
+          cat /proc/cpuinfo| grep "processor"| wc -l
+          lscpu
+
+          export IPV6=$(ip -6 address show  | grep inet6 | awk '{print $2}' | cut -d'/' -f1 | sed -n '2p')
+          export IPV4=$(ip -4 address show  | grep inet | grep -v 127.0.0 | awk '{print $2}' | cut -d'/' -f1 | sed -n '1p')
+          echo $IPV4
+          echo $IPV6
+          echo "X_IPV6=${IPV6}" >> $GITHUB_ENV
+          echo "X_IPV4=${IPV4}" >> $GITHUB_ENV
+
           git submodule update --init
+
       - name: Prepare Libraries and Extensions
-        uses: addnab/docker-run-action@v3
-        with:
-          image: docker.io/jingjingxyk/build-swoole-cli:download-box-nginx-alpine-20230505T112517Z
-          # image: phpswoole/swoole-cli-builder:download-box-nginx-alpine-20230505T112517Z
-          options: -v ${{ github.workspace }}:/work -w /work
-          run: |
-            set -eux
-            mkdir -p pool/lib
-            mkdir -p pool/ext
-            mkdir -p ext
-            cp -rf /usr/share/nginx/html/extensions/* pool/ext
-            cp -rf /usr/share/nginx/html/libraries/* pool/lib
+        run: |
+          set -x
+          bash sapi/download-box/download-box-get-archive-from-container.sh
       - name: Prepare
         uses: addnab/docker-run-action@v3
         with:
-          image: docker.io/jingjingxyk/build-swoole-cli:all-dependencies-alpine-swoole-cli-x86_64-20230505T120137Z
-          # image: phpswoole/swoole-cli-builder:all-dependencies-alpine-swoole-cli-x86_64-20230505T120137Z
+          image: docker.io/jingjingxyk/build-swoole-cli:all-dependencies-alpine-3.17-php8-v1.0.0-x86_64-20230614T150918Z
           options: -v ${{ github.workspace }}:/work -w /work
           run: |
             set -eux
             # export PATH=/work/bin/runtime:$PATH  # 容器已经内置 php 和 composer 容器
-            composer update --no-dev  --optimize-autoloader
-            php prepare.php  +inotify +apcu +ds --with-global-prefix=/usr
+
+            # composer update --no-dev  --optimize-autoloader
+            composer update   --optimize-autoloader
+            php prepare.php   +inotify +apcu +ds +xlswriter +ssh2
+
             chmod a+x make.sh
             head -n 20 make.sh
+
       - name: Build
         uses: addnab/docker-run-action@v3
         with:
-          image: docker.io/jingjingxyk/build-swoole-cli:all-dependencies-alpine-swoole-cli-x86_64-20230505T120137Z
-          # image: phpswoole/swoole-cli-builder:all-dependencies-alpine-swoole-cli-x86_64-20230505T120137Z
+          image: docker.io/jingjingxyk/build-swoole-cli:all-dependencies-alpine-3.17-php8-v1.0.0-x86_64-20230614T150918Z
           options: -v ${{ github.workspace }}:/work -w /work
           run: |
             bash ./make.sh config
             bash ./make.sh build
             bash ./make.sh archive
 
+
       - name: Show Build Result
         run: |
           ./bin/swoole-cli -v
+          ./bin/swoole-cli -m
+          ./bin/swoole-cli --ri swoole
           file ./bin/swoole-cli
           readelf -h ./bin/swoole-cli
           ./bin/swoole-cli -r "echo PHP_VERSION;"
+          ./bin/swoole-cli ./vendor/bin/phpunit ./sapi/src/UnitTest/MainTest.php  --list-tests
+          ./bin/swoole-cli ./vendor/bin/phpunit ./sapi/src/UnitTest/MainTest.php
 
       - name: production artifacts
         uses: actions/upload-artifact@v3
