--- a/.github/workflows/windows-cygwin.yml
+++ b/.github/workflows/windows-cygwin.yml
@@ -4,14 +4,14 @@ on: [ push, pull_request ]
 
 jobs:
   windows-cygwin:
-    if: 0
+    if: 1
     runs-on: windows-latest
     steps:
       - name: Prepare git
-
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
+          ipconfig
       - uses: actions/checkout@v3
       - name: Prepare submodule
         run: |
