--- a/.github/workflows/macos-x86_64.yml
+++ b/.github/workflows/macos-x86_64.yml
@@ -4,7 +4,7 @@ on: [ push, pull_request ]
 
 jobs:
   macos-x86_64:
-    if: 1
+    if: 0
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -76,7 +76,7 @@ jobs:
           # composer update --no-dev  --optimize-autoloader
           composer update  --optimize-autoloader
 
-          php prepare.php --without-docker=1  --with-build-type=release  +apcu +ds +xlswriter +ssh2
+          php prepare.php --without-docker=1  --with-build-type=release --with-swoole-pgsql=1  +ds +apcu  +xlswriter +ssh2
 
       - name: Cache all-library
         uses: actions/cache@v3
